and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

7th November 2014  Laurent Garnier (interfaces-V10-00-19 - interfaces-V10-00-20)
- G4UIQt.cc
  o Fix G4Vis thread number in G4Cout
  o Set focus on command line at the beggining
  o Better fix for the "Recreate help tree each time we create a new viewer"

5th November 2014  Laurent Garnier
- G4UIQt.cc:
  o Recreate help tree each time we create a new viewer
- G4UIWt.cc: 
  o Remove a warning

31th October 2014  Laurent Garnier
- G4UIQt.cc:
  o Use FindMacroPath() instead of GetMacroSearchPath()
  o Display G4Exception warning messages in G4cerr
  o Fix a problem with Wt include names on case sensitive systems
  o Try to fix the fact that the cout widget does not update in real
    time when run in progress. Do not totally fix this, but update
    is more frequent now.

30th October 2014  John Allison (interfaces-V10-00-18)
- G4UIQt.cc: Added a mutex in ReceiveG4cout and ReceiveG4cerr.

29th October 2014  Laurent Garnier (interfaces-V10-00-16 retagged interfaces-V10-00-17)
- G4UIQt : 
  o For all methods who need a file, instead of getting the file from current path,
    look for it in MacroPath
  o Set viewer text tab "read only"
  o When closing a dock panel, hide it instead of removing it. Prevent from null
    pointer exception

22th October 2014  Laurent Garnier (interfaces-V10-00-15)
- G4UIQt : 
  o Remove viewer size parameter (it was no longer used)
  o Add the ability to have HTML tags inside the file given by AddViewerTabFromFile. 
    This will allow to include for example a README file with an <img> or other HTML tags
    Ex :
         =====================  README  ==============================
         <p align="center">